modifications on stuff

--- a/notebooks/ktrain.ipynb
+++ b/notebooks/ktrain.ipynb
@@ -93,7 +93,7 @@
     "X, y, y_bin = data['text_review'], data['tag'], data['bin_tag']\n",
     "\n",
     "X_train, X_test, y_train, y_test =  [np.asarray(x) for x in train_test_split(X, y_bin, test_size=0.25, random_state=42)]\n",
-    "X_train, X_val, y_train, y_val = [np.asarray(x) for x in train_test_split(X_train, y_train, test_size=0.1, random_state=42)]\n"
+    "X_train, X_val, y_train, y_val = [np.asarray(x) for x in train_test_split(X_train, y_train, test_size=0.1, random_state=42)]"
    ]
   },
   {
@@ -437,15 +437,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 128,
    "metadata": {},
    "outputs": [],
@@ -512,7 +503,7 @@
     "\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig(PATH_IMAGES + \"Distilbert_1_epoch_SOCC.png\", dpi=300, quality=95, format='png', bbox_inches='tight')"
+    "#fig.savefig(PATH_IMAGES + \"Distilbert_1_epoch_SOCC.png\", dpi=300, quality=95, format='png', bbox_inches='tight')"
    ]
   },
   {
