Finished discourse choice to split train/val with variable size

--- a/notebooks/non-neural.ipynb
+++ b/notebooks/non-neural.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Splitting files...\n",
+      "Splitting finished.\n",
+      "Preprocessing of the training data...\n",
+      "Preprocessing finished in 25.073704957962036 seconds.\n",
+      "Preprocessing of the test data...\n",
+      "Preprocessing finished in 6.366779088973999 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "# Amazon\n",
     "data = pd.read_csv(PATH_RAW + \"2830_reviews.csv\")\n",
@@ -79,22 +92,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2036, 7)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2036 entries, 0 to 2035\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   text_review    2036 non-null   object \n",
+      " 1   read_score     2036 non-null   float64\n",
+      " 2   sentiment      2036 non-null   float64\n",
+      " 3   num_upper      2036 non-null   int64  \n",
+      " 4   num_discourse  2036 non-null   int64  \n",
+      " 5   num_tokens     2036 non-null   int64  \n",
+      " 6   num_char       2036 non-null   int64  \n",
+      " 7   text_pos       2036 non-null   object \n",
+      " 8   lemmas         2036 non-null   object \n",
+      "dtypes: float64(2), int64(4), object(3)\n",
+      "memory usage: 143.3+ KB\n"
+     ]
     }
    ],
    "source": [
-    "X_train.shape"
+    "X_train.info()"
    ]
   },
   {
