Started insights on tag distrib

--- a/notebooks/data_distrib.ipynb
+++ b/notebooks/data_distrib.ipynb
@@ -36,8 +36,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv(PATH_DATA + \"2829_train.csv\")\n",
+    "train = pd.read_csv(PATH_RAW + \"4000_CRC.csv\")\n",
     "val_train = train['tag'].value_counts().sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a     545\n",
+       "b    1419\n",
+       "c    1517\n",
+       "d     564\n",
+       "g       1\n",
+       "x       1\n",
+       "Name: tag, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_train"
    ]
   },
   {
