--- a/notebooks/non-neural.ipynb
+++ b/notebooks/non-neural.ipynb
@@ -63,49 +63,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_ynacc = pd.read_csv(PATH_RAW + \"ydata-ynacc-v1_0_iac_annotations.tsv\", sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 22536 entries, 0 to 22535\n",
-      "Data columns (total 14 columns):\n",
-      " #   Column             Non-Null Count  Dtype \n",
-      "---  ------             --------------  ----- \n",
-      " 0   sdid               22536 non-null  object\n",
-      " 1   commentindex       22536 non-null  int64 \n",
-      " 2   headline           22536 non-null  object\n",
-      " 3   url                22536 non-null  object\n",
-      " 4   guid               22536 non-null  int64 \n",
-      " 5   commentid          22536 non-null  object\n",
-      " 6   timestamp          22536 non-null  int64 \n",
-      " 7   thumbs-up          22536 non-null  int64 \n",
-      " 8   thumbs-down        22536 non-null  int64 \n",
-      " 9   text               22533 non-null  object\n",
-      " 10  parentid           22536 non-null  object\n",
-      " 11  constructiveclass  21407 non-null  object\n",
-      " 12  sd_agreement       18690 non-null  object\n",
-      " 13  sd_type            22512 non-null  object\n",
-      "dtypes: int64(5), object(9)\n",
-      "memory usage: 2.4+ MB\n"
+      "Splitting files...\n",
+      "Splitting finished.\n"
      ]
     }
    ],
    "source": [
-    "data_ynacc.info()"
+    "data = pd.read_csv(PATH_RAW + \"4000_CRC.csv\")\n",
+    "train, test = file_split(data, 0.2, 'text_review', 'tag', out_dir=PATH_DATA)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -127,7 +121,7 @@
    ],
    "source": [
     "# Amazon for TRAINING and TEST\n",
-    "data = pd.read_csv(PATH_RAW + \"2830_reviews.csv\")\n",
+    "data = pd.read_csv(PATH_RAW + \"4000_CRC.csv\")\n",
     "\n",
     "train, test = file_split(data, 0.2, 'text_review', 'tag')\n",
     "train, val = preprocess_train(train, text_column='text_review', tag_column='tag', pattern='abcd')\n",
