Ran experiments, added all results and confusion matrices (except BERT)

--- a/notebooks/data_distrib.ipynb
+++ b/notebooks/data_distrib.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "import sys\n",
+    "if not '..' in sys.path:\n",
+    "    sys.path.append('..')\n",
+    "from src.PPP import *\n",
+    "from src.utils import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "PATH_RAW = '../data/raw_data/'\n",
     "PATH_DATA = '../data/data/'\n",
+    "PATH_INTER = '../data/intermediate/'\n",
     "PATH_IMAGES = '../assets/images/'"
    ]
   },
@@ -153,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -162,18 +169,26 @@
      "text": [
       "0    10983\n",
       "1    11812\n",
-      "Name: constructiveclass, dtype: int64\n"
+      "Name: constructiveclass, dtype: int64\n",
+      "Preprocessing of the test data...\n",
+      "Preprocessing finished in 2343.160041809082 seconds.\n"
      ]
     }
    ],
    "source": [
     "# Yahoo News Annotated Comments Corpus\n",
-    "test_ynacc = pd.read_csv(PATH_DATA + \"ydata-ynacc-v1_0_expert_annotations.tsv\", sep='\\t')\n",
+    "test_ynacc = pd.read_csv(PATH_INTER + \"ydata-ynacc-v1_0_expert_annotations.tsv\", sep='\\t')\n",
     "test_ynacc['constructiveclass'] = test_ynacc.loc[:, 'constructiveclass'].map({'Constructive': '1',\n",
     "                                                                      'Not constructive': '0'})\n",
     "test_ynacc_distrib = test_ynacc.constructiveclass.value_counts().sort_index()\n",
     "\n",
-    "print(test_ynacc_distrib)"
+    "print(test_ynacc_distrib)\n",
+    "test_ynacc.dropna(subset=['constructiveclass'], inplace=True)\n",
+    "\n",
+    "test_ynacc = preprocess_test(test_ynacc, text_column='text', tag_column='constructiveclass', pattern=None)\n",
+    "test_ynacc = test_ynacc.rename(columns={'text': 'text_review', 'constructiveclass': 'bin_tag'})\n",
+    "\n",
+    "test_ynacc.to_csv(PATH_DATA + 'YNACC.csv', index=False)\n"
    ]
   },
   {
