--- a/notebooks/non-neural.ipynb
+++ b/notebooks/non-neural.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.svm import LinearSVC\n",
+    "from sklearn.dummy import DummyClassifier\n",
     "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, f1_score, make_scorer"
    ]
   },
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,36 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Splitting files...\n",
-      "Splitting finished.\n",
-      "Preprocessing of the test data...\n",
-      "Preprocessing finished in 445.30675888061523 seconds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# YNACC\n",
-    "test_ynacc = pd.read_csv(PATH_INTER + \"ydata-ynacc-v1_0_expert_annotations.tsv\", sep='\\t')\n",
-    "\n",
-    "_, test_ynacc = file_split(test_ynacc, test_size=0.2, text_column='text', tag_column='constructiveclass', out_dir=None)\n",
-    "\n",
-    "test_ynacc['constructiveclass'] = test_ynacc.loc[:, 'constructiveclass'].map({'Constructive': '1',\n",
-    "                                                                      'Not constructive': '0'})\n",
-    "\n",
-    "test_ynacc = preprocess_test(test_ynacc, text_column='text', tag_column='constructiveclass', pattern=None)\n",
-    "test_ynacc = test_ynacc.rename(columns={'text': 'text_review', 'constructiveclass': 'bin_tag'})\n",
-    "\n",
-    "test_ynacc.to_csv(PATH_DATA + 'YNACC.csv', index=False)\n",
+    "test_ynacc = pd.read_csv(PATH_DATA + \"YNACC.csv\")\n",
     "\n",
     "# X, y\n",
-    "X_test_ynacc, y_bin_test_ynacc = test_ynacc.drop(['bin_tag'], axis=1), test_ynacc['bin_tag'].copy()"
+    "X_ynacc, y_bin_ynacc = test_ynacc.drop(['bin_tag'], axis=1), test_ynacc['bin_tag'].copy()"
    ]
   },
   {
@@ -157,6 +137,137 @@
     "\n",
     "binary_X = [X_test_CRC, X_test_c3, X_test_ynacc]\n",
     "binary_y = [y_bin_test_CRC, y_bin_test_c3, y_bin_test_ynacc]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running dummy baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DummyClassifier(constant=None, random_state=10, strategy='stratified')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy_clf = DummyClassifier(strategy=\"stratified\", random_state=10)\n",
+    "dummy_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.2846875\n",
+      "F1 Score: 0.2846394793869558\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.11      0.12      0.12       429\n",
+      "           1       0.33      0.31      0.32      1121\n",
+      "           2       0.36      0.37      0.37      1201\n",
+      "           3       0.14      0.14      0.14       449\n",
+      "\n",
+      "    accuracy                           0.28      3200\n",
+      "   macro avg       0.24      0.24      0.24      3200\n",
+      "weighted avg       0.28      0.28      0.28      3200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = dummy_clf.predict(X_train)\n",
+    "print(\"Accuracy:\", accuracy_score(y_train, y_pred))\n",
+    "print(\"F1 Score:\", f1_score(y_train, y_pred, average='weighted'))\n",
+    "print(classification_report(y_train, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DummyClassifier(constant=None, random_state=10, strategy='stratified')"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy_clf_bin = DummyClassifier(strategy=\"stratified\", random_state=10)\n",
+    "dummy_clf_bin.fit(X_train, y_bin_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4903125"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy_clf_bin.score(X_train, y_bin_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.4903125\n",
+      "F1 Score: 0.4902392904540828\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.47      0.47      0.47      1550\n",
+      "           1       0.51      0.51      0.51      1650\n",
+      "\n",
+      "    accuracy                           0.49      3200\n",
+      "   macro avg       0.49      0.49      0.49      3200\n",
+      "weighted avg       0.49      0.49      0.49      3200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = dummy_clf_bin.predict(X_train)\n",
+    "print(\"Accuracy:\", accuracy_score(y_bin_train, y_pred))\n",
+    "print(\"F1 Score:\", f1_score(y_bin_train, y_pred, average='weighted'))\n",
+    "print(classification_report(y_bin_train, y_pred))"
    ]
   },
   {
